--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<script src="https://code.jquery.com/jquery-3.1.1.js"></script>
 
 	<!-- Added a link to reset stylesheet -->
-	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+	<!-- <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
 
     <!-- Added a link to css stylesheet -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
